# loratestbed

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
loratestbed/: controller.py  device_manager.py  experiment_logbook.py  main_controller.py  main_demo.py  main_gateway.py  metrics.py  post_experiment_analysis.py  run_testbed.py  serial_monitor.py  utils.py
sketch/: README.md
sketch/controller/: controller.ino
sketch/debugging/rx_debug/: rx_debug.ino
sketch/debugging/tx_debug/: tx_debug.ino
sketch/device/: device.ino
sketch/gateway_reference/: gateway_reference.ino
sketch/rx_debug/: rx_debug.ino
sketch/tx_debug/: tx_debug.ino
tests/: test_metrics.py  test_utils.py
tests/data/: contoller_test.csv  gateway_test.csv  test_packet_trace.csv
