[tool.poetry]
name = "loratestbed"
version = "0.1.1"
description = ""
authors = ["Raghav Subbaraman <rsubbaraman@eng.ucsd.edu>","Abijit Jayachandran <ajayachandran@ucsd.edu>]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyserial = "^3.5"
numpy = "^1.25.2"
pandas = "^2.1.1"
tabulate = "^0.9.0"
matplotlib = "^3.8.0"
pyqt5 = "^5.15.9"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
